--- a/localcontexts/static/css/register.css
+++ b/localcontexts/static/css/register.css
@@ -306,21 +306,18 @@ input[type="checkbox"] {
 
 /*Google auth*/
 .center-items {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
-.horizontal-line-right,
-.horizontal-line-left {
-  width: 100%;
-  height: 1px;
-  background-color: rgba(0, 0, 0, 0.5);
+.horizental-line{
+    height: 1px;
+    width: 100%;
+    background: black;
 }
 
-.horizontal-line-right {
-  margin-left: 16px;
-}
-
-.horizontal-line-left {
-  margin-right: 16px;
+.register-text{
+    display: flex;
+    align-self: start;
+    margin-left: 35px;
 }
