--- a/templates/accounts/create-profile.html
+++ b/templates/accounts/create-profile.html
@@ -1,5 +1,4 @@
-{% extends 'register-base.html' %} {% block title %} Create Profile {% endblock
-%} {% load static %} {% block card %} {% if user.is_authenticated %}
+{% extends 'register-base.html' %} {% block title %} Create Profile {% endblock%} {% load static %} {% block card %} {% if user.is_authenticated %}
 
 <div class="flex-this column w-90">
   <div><h2 class="no-top-margin">Create your personal profile</h2></div>
