--- a/templates/register-base.html
+++ b/templates/register-base.html
@@ -65,7 +65,7 @@
 
         </div>
     
-        <div class="registration-form-container flex-this column">
+        <div class="registration-form-container flex-this column margin-bottom-16">
             {% block card %} {% endblock %}    
         </div>
 
