--- a/templates/partials/_members.html
+++ b/templates/partials/_members.html
@@ -681,11 +681,13 @@
                             </div>
 
                             <div class="w-50 margin-top-2 right-text">
-                                <small>Looking for someone who isn't on this list? <br>
-                                    <a onclick="openInviteUserModalView()" class="darkteal-text pointer">
-                                        Invite them to Local Contexts Hub
-                                    </a>
-                                </small>
+                                {% if not env == "SANDBOX" %}
+                                    <small>Looking for someone who isn't on this list? <br>
+                                        <a onclick="openInviteUserModalView()" class="darkteal-text pointer">
+                                            Invite them to Local Contexts Hub
+                                        </a>
+                                    </small>
+                                {% endif %}
                             </div>
                         </div>
 
@@ -695,29 +697,31 @@
         </div>
 
         <!-- INVITE NEW USER MODAL VIEW -->
-        <div id="inviteUserModalView" class="modal-defaults add-member-modal flex-this column w-100 hide">
+        {% if not env == "SANDBOX" %}
+            <div id="inviteUserModalView" class="modal-defaults add-member-modal flex-this column w-100 hide">
 
-            <h3>Invite New User</h3>
-            <form method="POST" action="{% url 'invite' %}">
-                {% csrf_token %}
+                <h3>Invite New User</h3>
+                <form method="POST" action="{% url 'invite' %}">
+                    {% csrf_token %}
 
-                <label for="email"> Email Address </label><br>
-                {{ invite_form.email }}<br>
+                    <label for="email"> Email Address </label><br>
+                    {{ invite_form.email }}<br>
 
-                <label for="message"> Output Message (Optional) </label><br>
-                {{ invite_form.message }}<br>
+                    <label for="message"> Output Message (Optional) </label><br>
+                    {{ invite_form.message }}<br>
 
-                <div class="flex-this row">
-                    <div class="flex-this row w-50 flex-start">
-                        <button onclick="openAddModalView()" type="button" class="primary-btn white-btn margin-top-2">Back</button>
+                    <div class="flex-this row">
+                        <div class="flex-this row w-50 flex-start">
+                            <button onclick="openAddModalView()" type="button" class="primary-btn white-btn margin-top-2">Back</button>
+                        </div>
+                        <div class="flex-this row w-50 flex-end">
+                            <button type="submit" class="primary-btn action-btn margin-top-2">Send Invitation</button>
+                        </div>
                     </div>
-                    <div class="flex-this row w-50 flex-end">
-                        <button type="submit" class="primary-btn action-btn margin-top-2">Send Invitation</button>
-                    </div>
-                </div>
-            </form>
+                </form>
 
-        </div>
+            </div>
+        {% endif %}
     </span>
 </div>
 
