--- a/templates/public.html
+++ b/templates/public.html
@@ -28,32 +28,44 @@
                             {% endif %}                            
                         </div>
                         <div class="margin-left-16">
-                            <a id="openContactModalBtn" class="primary-btn action-btn">Contact Us</a>
+                            {% if env == "SANDBOX" %}
+                                <div class="btn-with-helptext">
+                                    <a class="primary-btn disabled-btn">Contact Us</a>
+                                    <span class="btn-help-text">
+                                        Contacting other accounts is not available in the Sandbox.
+                                    </span>
+                                </div>
+                            {% else %}
+                                <a id="openContactModalBtn" class="primary-btn action-btn">Contact Us</a>
+                            {% endif %}
                         </div>
                     </div>
 
-                    <div id="contactModal" class="modal hide">
-                        <div class="modal-defaults contact-modal flex-this column w-100">
-                            <div class="w-100">
-                                <div class="flex-this space-between">
-                                    <div class="w-80">
-                                        <h2 class="primary-black-text no-top-margin">Contact form</h2>  
-                                        <p>This message will be sent to the administrator of {{ community.community_name }}.</p>  
+                    {% if not env == "SANDBOX" %}
+                        <div id="contactModal" class="modal hide">
+                            <div class="modal-defaults contact-modal flex-this column w-100">
+                                <div class="w-100">
+                                    <div class="flex-this space-between">
+                                        <div class="w-80">
+                                            <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                            <p>This message will be sent to the administrator of {{ community.community_name }}.</p>  
+                                        </div>
+                                        <div>
+                                            <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
+                                        </div>
                                     </div>
-                                    <div>
-                                        <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
-                                    </div>
-                                </div>
 
-                                <form id="sendMsgForm" method="POST" action="">
-                                    {% csrf_token %}
-                                    {{ form.as_p }}
-                                    <input type="hidden" name="contact_btn">
-                                    <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
-                                </form>    
+                                    <form id="sendMsgForm" method="POST" action="">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <input type="hidden" name="contact_btn">
+                                        <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
+                                    </form>    
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
+
                 {% else %}
                     <div class="loc bold margin-bottom-16">
                         <small>
@@ -148,32 +160,44 @@
                         </div>
                         
                         <div class="margin-left-16">
-                            <a id="openContactModalBtn" class="primary-btn action-btn">Contact Us</a>
+                            {% if env == "SANDBOX" %}
+                                <div class="btn-with-helptext">
+                                    <a class="primary-btn disabled-btn">Contact Us</a>
+                                    <span class="btn-help-text">
+                                        Contacting other accounts is not available in the Sandbox.
+                                    </span>
+                                </div>
+                            {% else %}
+                                <a id="openContactModalBtn" class="primary-btn action-btn">Contact Us</a>
+                            {% endif %}
                         </div>
                     </div>
 
-                    <div id="contactModal" class="modal hide">
-                        <div class="modal-defaults contact-modal flex-this column w-100">
-                            <div class="w-100">
-                                <div class="flex-this space-between">
-                                    <div class="w-70">
-                                        <h2 class="primary-black-text no-top-margin">Contact form</h2>  
-                                        <p>This message will be sent to the administrator of {{ institution.institution_name }}.</p>  
+                    {% if not env == "SANDBOX" %}
+                        <div id="contactModal" class="modal hide">
+                            <div class="modal-defaults contact-modal flex-this column w-100">
+                                <div class="w-100">
+                                    <div class="flex-this space-between">
+                                        <div class="w-70">
+                                            <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                            <p>This message will be sent to the administrator of {{ institution.institution_name }}.</p>  
+                                        </div>
+                                        <div>
+                                            <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
+                                        </div>
                                     </div>
-                                    <div>
-                                        <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
-                                    </div>
-                                </div>
 
-                                <form id="sendMsgForm" method="POST" action="">
-                                    {% csrf_token %}
-                                    {{ form.as_p }}
-                                    <input type="hidden" name="contact_btn">
-                                    <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
-                                </form>    
+                                    <form id="sendMsgForm" method="POST" action="">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <input type="hidden" name="contact_btn">
+                                        <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
+                                    </form>    
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
+
                 {% else %}
                     <div class="loc bold margin-bottom-16">
                         <small>
@@ -265,34 +289,49 @@
             {% if request.user.is_authenticated %}
                 {% if researcher.contact_email_public %}
                     {% if not researcher.user == request.user %}
+
                         <div class="margin-left-16">
-                            <a id="openContactModalBtn" class="primary-btn action-btn">Contact Me</a>
+                            {% if env == "SANDBOX" %}
+                                <div class="btn-with-helptext">
+                                    <a class="primary-btn disabled-btn">Contact Me</a>
+                                    <span class="btn-help-text">
+                                        Contacting other accounts is not available in the Sandbox.
+                                    </span>
+                                </div>
+
+                            {% else %}
+                                <a id="openContactModalBtn" class="primary-btn action-btn">Contact Me</a>
+                            {% endif %}
                         </div>
+                        
                     {% endif %}
                 {% endif %}
                 
-                <div id="contactModal" class="modal hide">
-                    <div class="modal-defaults contact-modal flex-this column w-100">
-                        <div class="w-100">
-                            <div class="flex-this space-between">
-                                <div>
-                                    <h2 class="primary-black-text no-top-margin">Contact form</h2>  
-                                    <p>This message will be sent to {% firstof researcher.user.get_full_name researcher.user.username %}.</p>  
+                {% if not env == "SANDBOX" %}
+                    <div id="contactModal" class="modal hide">
+                        <div class="modal-defaults contact-modal flex-this column w-100">
+                            <div class="w-100">
+                                <div class="flex-this space-between">
+                                    <div>
+                                        <h2 class="primary-black-text no-top-margin">Contact form</h2>  
+                                        <p>This message will be sent to {% firstof researcher.user.get_full_name researcher.user.username %}.</p>  
+                                    </div>
+                                    <div>
+                                        <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
+                                    </div>
                                 </div>
-                                <div>
-                                    <div class="close-modal-btn"><i class="fa-regular fa-xmark fa-xl"></i></div>
-                                </div>
-                            </div>
 
-                            <form id="sendMsgForm" method="POST" action="">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <input type="hidden" name="contact_btn">
-                                <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
-                            </form>    
+                                <form id="sendMsgForm" method="POST" action="">
+                                    {% csrf_token %}
+                                    {{ form.as_p }}
+                                    <input type="hidden" name="contact_btn">
+                                    <button class="primary-btn action-btn" id="sendMsgBtn">Send message <i class="fa fa-envelope" aria-hidden="true"></i></button>
+                                </form>    
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
+
             {% endif %}
 
         </div>
