--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -16,8 +16,8 @@
 <div class="flex-this space-between w-90">
   <div><h2 class="no-bottom-margin">Register with Local Contexts</h2></div>
   <div>
-    <p class="grey-text">
-      Already signed up?<a href="{% url 'login' %}" class="darkteal-text">
+    <p>
+      Already signed up?<a href="{% url 'login' %}" class="default-a">
         Sign in</a
       >
     </p>
