--- a/templates/register-base.html
+++ b/templates/register-base.html
@@ -46,7 +46,7 @@
                             Select an account
                         </li>
                         <li>
-                            {% if 'connect-community' in request.path or 'create-community' in request.path or 'confirm-community' in request.path or 'connect-institution' in request.path or 'create-institution' in request.path or 'confirm-institution' in request.path or 'create-institution/no-ror/' in request.path or 'connect-researcher' in request.path or 'preparation-step' in request.path or 'community-boundary' in request.path or 'add-community-boundary' or 'upload-boundary-file' in request.path%}
+                            {% if 'connect-community' in request.path or 'create-community' in request.path or 'confirm-community' in request.path or 'connect-institution' in request.path or 'create-institution' in request.path or 'confirm-institution' in request.path or 'create-institution/no-ror/' in request.path or 'connect-researcher' in request.path or 'preparation-step' in request.path or 'community-boundary' in request.path or 'add-community-boundary' in request.path or 'upload-boundary-file' in request.path %}
                                 {% include 'snippets/bullet-big.html'%}
                             {% else %}
                                 {% include 'snippets/bullet.html'%}
@@ -65,7 +65,7 @@
 
         </div>
     
-        <div class="registration-form-container flex-this column">
+        <div class="registration-form-container flex-this column margin-bottom-16">
             {% block card %} {% endblock %}    
         </div>
 
