--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -12,7 +12,7 @@
 
         <div class="side-nav-container">
             <a href="{% if community %}{% url 'update-community' community.id %}{% endif %}{% if institution %}{% url 'update-institution' institution.id %}{% endif %}{% if researcher %}{% url 'update-researcher' researcher.id %}{% endif %}">
-                <div class="flex-this side-nav-item {% if 'update' in request.path %} selected {% else %} grey-text {% endif %}">
+                <div class="flex-this side-nav-item {% if '/communities/update/' in request.path %} selected {% else %} grey-text {% endif %}">
                     <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-circle-user fa-3x"></i></div>
                     <div class="w-80">
                         <p class="no-top-margin">
@@ -26,8 +26,18 @@
                                 <strong>Researcher Account</strong><br>Contact email, primary institution, description
                             {% endif %}
                         </p>
-                    </div>  
+                    </div>
                 </div>   
+            </a>
+            <a href="{% if community %}{% url 'update-community-boundary' community.id %}{% endif %}">
+                <div class="flex-this side-nav-item {% if '/communities/update-community-boundary/' in request.path %} selected {% else %} grey-text {% endif %}">
+                    <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-location-dot fa-3x"></i></div>
+                    <div class="w-80">
+                        <p class="margin-top-8">
+                            <strong>Boundary</strong><br>Community Location
+                        </p>
+                    </div>
+                </div>
             </a>
         </div>
 
